Refactor SolutionEvaluator to adjust SECURITY_FACTOR for distance calculations; enhance WebSocketConfig with transport settings; streamline AlgorithmExperiment for improved parameter handling and result tracking; update Constants for GLP serve duration; clean up SimulationState output formatting for better readability.